# dbt-sqlite-example

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint-models.yml  test.yml
dbs/: create_scanner_data.sql
docs/: overview.md  scanner_data.md
macros/: parse_ddmmyyy_date.sql
models/: cohorts.sql  models.yml  orders.sql
models/retail/: cohorts.sql  orders.sql
models/sources/: datasets.yml
