[tool.poetry]
name = "dbt-sqlite-test"
version = "0.1.0"
description = "Testing dbt with SQLite"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
dbt-core = {version = "^1.1.1", allow-prereleases = true}
dbt-sqlite = "^1.1.0"

[tool.poetry.dev-dependencies]
sqlfluff = "^0.13.2"
sqlfluff-templater-dbt = "^1.0.0"

[tool.sqlfluff.core]
dialect = "sqlite"
templater = "dbt"

[tool.sqlfluff.rules]
tab_space_size = 2
comma_style = "leading"
max_line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
