[tool.poetry]
name = "dbt-sqlite-test"
version = "0.1.0"
description = "Testing dbt with SQLite"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
dbt-core = {version = "^1.4.2", allow-prereleases = true}
dbt-sqlite = {version = "^1.4.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
sqlfluff = {version = "^2.0.0a5", allow-prereleases = true}
sqlfluff-templater-dbt = {version = "^2.0.0a5", allow-prereleases = true}

[tool.sqlfluff.core]
dialect = "sqlite"
max_line_length = 100
templater = "dbt"

[tool.sqlfluff.indentation]
tab_space_size = 2

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
