[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.poetry]
name = "dbt-sqlite-test"
version = "0.1.0"
description = "Testing dbt with SQLite"
authors = ["Edgar Ramírez Mondragón <edgarrm358@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.13"
dbt-core = { version = ">=1.3.0,<1.5.0", allow-prereleases = true }
dbt-sqlite = { version = ">=1.3.0,<1.4.0", allow-prereleases = true }

[tool.poetry.dev-dependencies]
sqlfluff = "^1.4.5"
sqlfluff-templater-dbt = "^1"

[tool.sqlfluff.core]
dialect = "sqlite"
templater = "dbt"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.rules]
tab_space_size = 2
max_line_length = 100
